style: add global style

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <form id="form" action="https://www.freecodecamp.com/email-submit">
             <input id="email" placeholder="Enter your Email" type="email" required>
-            <button id="submit">Submit</button>
+            <button id="submit">Get started</button>
         </form>
     </section>
     <section id="features">
